# clu2c

./: .gitignore  COPYING  COPYRIGHT.PCLU  ChangeLog  FROMPCLU  INSTALL  INSTALL.ja  Makefile.dos  Makefile.in  Makefile.unix  NEWS  README  README.ja  acconfig.h  configh.in  configure  configure.ac  configure.bat  configure.in  make.info  optimize.info
config/: ALLDIRS  ChangeLog  Makefile.dos  Makefile.in  Makefile.unix  README  configh.98  configh.dos  configh.x68  configmk.98  configmk.dos  configmk.in  configmk.x68  defs.98  defs.dos  defs.x68  dosfile  fakeclush.in  insubdir.bat  m4all  makedist  mkconfh  mkconfmk  mkmf.bat  mkmf.sh  mkmf1.bat  mkmkmfbat  remove.bat
doc/: ChangeLog  Makefile.dos  Makefile.in  Makefile.unix  README  advanced.texi  basic.texi  changes.texi  clu2c.info  clu2c.info-1  clu2c.info-2  clu2c.info-3  clu2c.info-4  clu2c.texi  copying.texi  index.texi  install.texi  intro.texi  library.texi
include/: ChangeLog  Makefile.dos  Makefile.in  Makefile.unix  README  clu2c.h
include/clu2c/: ChangeLog  Makefile.dos  Makefile.in  Makefile.unix  README  any.h  array.h  bool.h  char.h  clu2c.h  glo.h  int.h  istream.h  itertype.h  null.h  oneof.h  proctype.h  real.h  record.h  sequence.h  stream.h  string.h  struct.h  type.h  variant.h
include/config/: ChangeLog  Makefile.dos  Makefile.in  Makefile.unix  README  dirent.h  errno.h  float.h  limits.h  math.h  param.h  pwd.h  signal.h  stat.h  stdarg.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
lib/: ChangeLog  Index  Makefile.dos  Makefile.in  Makefile.unix  README  basic.spc  dirent.lib  external.lib  file.lib  filename.lib  int.lib  makelib  math.lib  progenv.lib  pstream.lib  runtime.lib  uint.lib
lib/built-in/: ChangeLog  Makefile.dos  Makefile.in  Makefile.unix  README  any.c  array.c  array.h  bool.c  bool.h  built-in.spc  char.c  char.h  int.c  int.h  itertype.c  itertype.h  null.c  null.h  oneof.c  oneof.h  proctype.c  proctype.h  real.c  real.h  record.c  record.h  sequence.c  sequence.h  string.c  string.h  struct.c  struct.h  variant.c  variant.h
lib/clu2c/: ChangeLog  LIB.xld  Makefile.dos  Makefile.in  Makefile.unix  README  _fs_dos.clu  _fs_unix.clu  acos.c  asin.c  atan.c  atan2.c  clurt.c  cos.c  cosh.c  cur_dir.clu  de_names.clu  dfltroot.c  dfltroot.spc  dir_fn.clu  exp.c  f_date.clu  f_exists.clu  fakeclu.bat  filetype.clu  fn_abs.clu  fn_apply.clu  fn_asdir.clu  fn_drive.clu  fn_f_dir.clu  fn_f_suf.clu  fn_isabs.clu  fn_nodir.clu  fn_pdir.clu  fn_simpl.clu  fn_tostr.clu  fn_xhome.clu  getenv.clu  getopt.clu  getopt.equ  (+23 more)
lib/clu2c/pretrans/: _fs_dos.c  _fs_unix.c  cur_dir.c  de_names.c  dir_fn.c  f_date.c  f_exists.c  filetype.c  fn_abs.c  fn_apply.c  fn_asdir.c  fn_drive.c  fn_f_dir.c  fn_f_suf.c  fn_isabs.c  fn_nodir.c  fn_pdir.c  fn_simpl.c  fn_tostr.c  fn_xhome.c  getenv.c  getopt.c  home_dir.c  input_st.c  intopars.c  intounpa.c  intxpars.c  intxunpa.c  progargs.c  progname.c  pstream.c  rtenv.c  split_de.c  system.c  terminat.c
lib/gc/: ChangeLog  Makefile.dos  Makefile.in  Makefile.unix  README  gc_conf.h  gc_priv.h  if_mach.c  if_not_there.c  mach_dep.c  os_dep.c  setjmp_t.c  test.c
lib/jaio/: ChangeLog  Makefile.dos  Makefile.in  Makefile.unix  README  jaio.h  jclearer.c  jdecode.c  jencode.c  jfclose.c  jfeof.c  jferror.c  jfflush.c  jfgetc.c  jfgetpos.c  jfgets.c  jfill.c  jflush.c  jfnputs.c  jfopen.c  jfp.c  jfprintf.c  jfputc.c  jfputs.c  jfreopen.c  jfscanf.c  jfseek.c  jfsetpos.c  jftell.c  jgetc.c  jgetchar.c  jgetcsys.c  jgets.c  jperror.c  jprintf.c  jputc.c  jputchar.c  jputs.c  jrewind.c  jscanf.c  (+14 more)
lib/stdio/: ChangeLog  LIB.xld  Makefile.dos  Makefile.in  Makefile.unix  README  date.clu  del_file.clu  e_form.clu  f_form.clu  fakeclu.bat  fname.clu  g_form.clu  istream.c  now.clu  ren_file.clu  set_wdir.clu  stream.c  username.clu  wdir.clu
lib/stdio/pretrans/: date.c  del_file.c  e_form.c  f_form.c  fname.c  g_form.c  now.c  ren_file.c  set_wdir.c  username.c  wdir.c
mk/: ChangeLog  Makefile.dos  Makefile.in  Makefile.unix  README  archive.m4  c2o.m4  clusrc.m4  csrc.m4  dos.m4  exe.m4  hdrsrc.m4  mk.m4  spcsrc.m4  template.m4  unix.m4  wclusrc.m4  x68.m4
test/99bottles/: 99bottles.clu  99bottles.test
test/factorial/: factorial.clu
